--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Zien Lyu
-description: 'Studying at Cornell University majoring in Financial Engineering'
+description: 'MEng student studying at Cornell University majoring in Financial Engineering'
 url: ''
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
